--- a/LogReg.ipynb
+++ b/LogReg.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Project Overview\n",
     "\n",
-    "This project will focus on predicting the presence of heart disease using annonymized patient data from [UCI Machine Learning Repository](https://archive.ics.uci.edu/dataset/45/heart+disease). The published dataset includes 13 attibutes. elated to patient health and a \"target\" variable indicating the presence of heart disease. The target is binary, where:\n",
+    "This project will focus on predicting the presence of heart disease using annonymized patient data from [UCI Machine Learning Repository](https://archive.ics.uci.edu/dataset/45/heart+disease). The published dataset includes 13 attibutes related to patient health and a \"target\" variable indicating the presence of heart disease. The target is binary, where:\n",
     "\n",
     "- 0 indicates no heart disease\n",
     "- 1 indicates heart disease\n",
