--- a/Sentiment_Analysis_using_imdb_movie_ratings.ipynb
+++ b/Sentiment_Analysis_using_imdb_movie_ratings.ipynb
@@ -1088,7 +1088,7 @@
         "id": "zU8pQJQaBczB"
       },
       "source": [
-        "The reviews for both training and testign datasets are on average, 230 words per review, both for the positive and negative reviews."
+        "The reviews for both training and test datasets are on average, 230 words per review, both for the positive and negative reviews."
       ]
     },
     {
@@ -1572,9 +1572,13 @@
         "id": "LNXfCcZhgNA1"
       },
       "source": [
-        "The reviews contain raw text with punctuation and occasional HTML tags. The text must be preprocessed and converted from their string format to a numeric representation of the text. The keras TextVectorization layer will help to standardize, tokenize, and vectorize the text data.  \n",
+        "The text must be preprocessed and converted from their string format to a numeric representation of the text. The keras TextVectorization layer will help to standardize, tokenize, and vectorize the text data.  \n",
         "\n",
-        "Standardization refers to preprocessing the text, typically to remove punctuation or HTML elements. Tokenization refers to splitting strings into tokens. In other words, breaking down a sentence into individual words. Vectorization refers to converting tokens into numbers so they can be fed into a neural network. Once TextVectorizer output is produced, it will be passed through the Keras Embedding layer which will predict the word embedding for each token.\n",
+        "- Standardization refers to preprocessing the text, typically to remove punctuation or HTML elements and converting text to lowercase.\n",
+        "- Tokenization refers to splitting strings into tokens. In other words, breaking down a sentence into individual words.\n",
+        "- Vectorization refers to converting tokens into numbers so they can be fed into a neural network.\n",
+        "\n",
+        "The TextVectorizer output is passed through the Keras Embedding layer which will predict the word embedding for each token.\n",
         "\n",
         "It is important to preprocess the data identically at training and testing phases of learning to prevent training-testing skew."
       ]
@@ -1748,7 +1752,7 @@
         "id": "NgjwgzM1rk7P"
       },
       "source": [
-        "A recurrent neural network architecture, LSTM, followed by a fully connected layer was tested for sentiment analysis of the IMDB ratings. The architecture  LSTM layer with tanh activation followed by a dropout layer, dense layer, dropout layer followed by a dense layer\n",
+        "A recurrent neural network architecture, LSTM, followed by a fully connected layer was tested for sentiment analysis of the IMDB ratings. The LSTM layer with tanh activation was followed by a dropout layer. For classification, a dense layer was followed with a dropout layer and an output layer with sigmoid activation.\n",
         "\n",
         "The following hyperparameters were optimized to minimize the loss function:\n",
         "- Number of RNN Layers\n",
